--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,11 +26,11 @@ services:
       - "3306:3306"
 
   webserver:
-    build: phpdocker/nginx
+    build: phpdocker/apache
     container_name: mini-lamp-webserver
-    working_dir: /application
+    working_dir: /public-html
     volumes:
-      - www:/application/public
+      - www:/public-html
     ports:
       - "80:80"
 
