Update multi version php

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,14 +34,14 @@ services:
     ports:
       - "80:80"
 
-  php-fpm72:
+  php-fpm-72:
     build: phpdocker/php-fpm-72
-    container_name: mini-lamp-php-fpm-72
+    container_name: mini-lamp-php-fpm
     working_dir: /application
     volumes:
       - www:/application/public
 
-  php-fpm56:
+  php-fpm-56:
     build: phpdocker/php-fpm-56
     container_name: mini-lamp-php-fpm-56
     working_dir: /application
