--- a/phpdocker/nginx/site.laravel.conf
+++ b/phpdocker/nginx/site.laravel.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
-    server_name example.com;
-    root /example.com/public;
+    server_name laraveldemo.local;
+    root /application/public/laraveldemo/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
@@ -21,9 +21,12 @@ server {
     error_page 404 /index.php;
 
     location ~ \.php$ {
-        fastcgi_pass php-fpm:9000;
+        fastcgi_pass php-fpm-56:9009;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PHP_VALUE "error_log=/var/log/nginx/application_php_errors.log";
+        fastcgi_buffers 16 16k;
+        fastcgi_buffer_size 32k;
         include fastcgi_params;
     }
 
