--- a/phpdocker/nginx/Dockerfile
+++ b/phpdocker/nginx/Dockerfile
@@ -8,3 +8,5 @@ RUN apt-get update \
         vim
 
 COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./site.wordpress.conf /etc/nginx/conf.d/wordpressdemo.local.conf 
+COPY ./site.laravel.conf /etc/nginx/conf.d/laraveldemo.local.conf 
