--- a/phpdocker/nginx/site.wordpress.conf
+++ b/phpdocker/nginx/site.wordpress.conf
@@ -31,7 +31,7 @@ server {
 
         location ~ \.php$ {
                 #NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
-                fastcgi_pass php-fpm:9000;
+                fastcgi_pass php-fpm-72:9000;
                 fastcgi_index index.php;
                 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
                 fastcgi_param PHP_VALUE "error_log=/var/log/nginx/application_php_errors.log";
