--- a/phpdocker/apache/Dockerfile
+++ b/phpdocker/apache/Dockerfile
@@ -4,5 +4,7 @@ RUN mkdir -p /usr/local/apache2/sites-available
 RUN mkdir -p /usr/local/apache2/htdocs/laraveldemo
 RUN mkdir -p /usr/local/apache2/htdocs/wordpressdemo
 
-COPY ./laraveldemo.conf /usr/local/apache2/sites-available/laraveldemo.conf 
+COPY ./httpd.conf /usr/local/apache2/conf/httpd.conf 
+COPY ./laraveldemo.conf /usr/local/apache2/sites-available/laraveldemo.conf
 COPY ./wordpressdemo.conf /usr/local/apache2/sites-available/wordpressdemo.conf 
+COPY ./vhosts.conf /usr/local/apache2/conf/extra/httpd-vhosts.conf 
