--- a/phpdocker/apache/laraveldemo.conf
+++ b/phpdocker/apache/laraveldemo.conf
@@ -1,8 +1,12 @@
 <VirtualHost *:80>
   ServerName laraveldemo.local
-  ProxyPass / php-fpm-56:9009
-
-  <Directory "/usr/local/apache2/htdocs/laraveldemo">
+  # ProxyPass / fcgi://php-fpm-72:9000/
+  <FilesMatch \.php$>
+    SetHandler "fcgi://php-fpm-72:9000/"
+  </FilesMatch>
+  ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://php-fpm-72:9000/application/public/laraveldemo/public/$1
+  DocumentRoot /usr/local/apache2/htdocs/laraveldemo/public/
+  <Directory "/usr/local/apache2/htdocs/laraveldemo/public">
     AllowOverride All
     <IfVersion < 2.4>
       Allow from all
