--- a/phpdocker/apache/wordpressdemo.conf
+++ b/phpdocker/apache/wordpressdemo.conf
@@ -1,8 +1,9 @@
 <VirtualHost *:80>
   ServerName wordpressdemo.local
-  ProxyPass / php-fpm-72:9009
+  # ProxyPass / fcgi://php-fpm-56:9000/
+  ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://php-fpm-56:9000/application/public/wordpressdemo/$1
   Options Indexes FollowSymLinks
-
+  DocumentRoot /usr/local/apache2/htdocs/wordpressdemo/
   <Directory "/usr/local/apache2/htdocs/wordpressdemo">
     AllowOverride All
     <IfVersion < 2.4>
